adding link back to homepage in table of contents. looks kind of bad right now

--- a/website/template.html
+++ b/website/template.html
@@ -54,6 +54,7 @@ $endfor$
       <div id="$idprefix$TOC" class="span3">
         <div class="well toc">
         <ul>
+          <li class="nav-header"><a href="index.html">Photohunter</a></li>
           <li class="nav-header">Table of Contents</li>
         </ul>
         $toc$
