added fake login page, move image capture to its own page

--- a/src/photohunter/platforms/android/assets/www/index.html
+++ b/src/photohunter/platforms/android/assets/www/index.html
@@ -32,8 +32,9 @@
     <body>
         <div class="app">
             <h1>Photohunter</h1>
-       			<button onclick="capturePhoto();">Take a Picture</button></br>
-				    <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+						<form action="capture.html">
+       				<input type="submit" value="Log In"></br>
+						</form>
 				</div>
     </body>
 </html>
