--- a/src/photohunter/platforms/android/assets/www/capture.html
+++ b/src/photohunter/platforms/android/assets/www/capture.html
@@ -24,17 +24,14 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <title>Photohunter</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Photohunter</h1>
-						<form action="capture.html">
-       				<input type="submit" value="Log In"></br>
-						</form>
+        <div>
+       			<button onclick="capturePhoto();">Take a Picture</button></br>
+				    <img style="display:none;width:60%;height:60%;" id="smallImage" src="" />
 				</div>
     </body>
 </html>
