--- a/src/photohunter/www/capture.html
+++ b/src/photohunter/www/capture.html
@@ -24,14 +24,17 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <title>Photohunter</title>
     </head>
     <body>
         <div>
-       			<button onclick="capturePhoto();">Take a Picture</button></br>
+       			<button class="btn btn-lg btn-default" onclick="capturePhoto();">Take a Picture</button></br>
 				    <img style="display:none;width:60%;height:60%;" id="smallImage" src="" />
 				</div>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </body>
 </html>
