adding rough page for the dataset seletion

--- a/src/photohunter/www/datasets.html
+++ b/src/photohunter/www/datasets.html
@@ -31,11 +31,24 @@
     </head>
     <body>
         <div>
-				    <img style="display:none;width:60%;height:60%;" id="smallImage" src="" />
-       			<button id="takepicture" class="btn btn-lg btn-default" onclick="capturePhoto();">Take a Picture</button></br>
-						<span id="lat" class="label label-default">Latitude</span>
-						<span id="lon" class="label label-default">Longitude</span></br></br>
-       			<button id="upload" class="btn btn-lg btn-success" style="display:none;">Upload</button></br>
+					<table class="table">
+						<thead>
+							<tr>
+								<th>Category</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Shaqtus</td>
+							</tr>
+							<tr>
+								<td>Barles Charkley</td>
+							</tr>
+							<tr>
+								<td>Cats</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
