--- a/src/photohunter/www/index.html
+++ b/src/photohunter/www/index.html
@@ -34,7 +34,7 @@
         <div class="app">
 				<div class="container">
 						<h1>Photohunter</h1>
-						<form action="capture.html">
+						<form action="datasets.html">
 							<input type="submit" class="btn btn-lg btn-default" value="Log In"></br>
 						</form>
 				</div>
