--- a/src/photohunter/www/datasets.html
+++ b/src/photohunter/www/datasets.html
@@ -42,7 +42,7 @@
 								<td><a href="capture.html">Shaqtus</a></td>
 							</tr>
 							<tr>
-								<td>B<a href="capture.html">Barles Charkley</a></td>
+								<td><a href="capture.html">Barles Charkley</a></td>
 							</tr>
 							<tr>
 								<td><a href="capture.html">Cats</a></td>
