--- a/src/photohunter/www/index.html
+++ b/src/photohunter/www/index.html
@@ -28,15 +28,22 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+				<style>
+					.h1, h1 {
+						font-size: 36px;
+						text-align: center;
+					}
+				</style>
         <title>Photohunter</title>
     </head>
     <body>
-        <div class="app">
-				<div class="container">
-						<h1>Photohunter</h1>
-						<form action="datasets.html">
-							<input type="submit" class="btn btn-lg btn-default" value="Log In"></br>
-						</form>
+        <div class="container">
+					<div class="row">
+							<h1>Photohunter</h1>
+							<form action="datasets.html">
+								<input type="submit" class="btn btn-lg btn-default" style="display:block; margin: 0 auto;" value="Log In"></br>
+							</form>
+					</div>
 				</div>
     		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
