--- a/src/photohunter/www/index.html
+++ b/src/photohunter/www/index.html
@@ -33,15 +33,23 @@
 						font-size: 36px;
 						text-align: center;
 					}
+					.vertical-center {
+						min-height: 100%;
+						min-height: 100vh;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						flex-direction: column;
+					}
 				</style>
         <title>Photohunter</title>
     </head>
     <body>
-        <div class="container">
+        <div class="container vertical-center">
 					<div class="row">
 							<h1>Photohunter</h1>
 							<form action="datasets.html">
-								<input type="submit" class="btn btn-lg btn-default" style="display:block; margin: 0 auto;" value="Log In"></br>
+								<input type="submit" class="btn btn-lg btn-default" style="display:block; margin: auto;" value="Log In"></br>
 							</form>
 					</div>
 				</div>
