adding logo to login screen

--- a/src/photohunter/www/index.html
+++ b/src/photohunter/www/index.html
@@ -47,6 +47,7 @@
     <body>
         <div class="container vertical-center">
 					<div class="row">
+							<img id="logo" src="img/logo.png" style="display:block; margin:auto; width:80%;" />
 							<h1>Photohunter</h1>
 							<form action="datasets.html">
 								<input type="submit" class="btn btn-lg btn-default" style="display:block; margin: auto;" value="Log In"></br>
