Added main menu and caused classification view (Judgebot9000) to repeatedly show (new, once the api is ready) images.

--- a/src/quickpic/cordova/www/index.html
+++ b/src/quickpic/cordova/www/index.html
@@ -5,6 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/quickpic.css">
+
+        <!-- D3.js + Charts -->
+        <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+        <script src='js/d3.chart.min.js' type="text/javascript"></script>
+        <script src='js/d3.chart.pie.js' type="text/javascript"></script>
+
+        <!-- Application code -->
         <script src='js/dist/quickpic.js' type="text/javascript"></script>
     </head>
     <body>
