working on getting the profile picture

--- a/src/photohunter/www/datasets.html
+++ b/src/photohunter/www/datasets.html
@@ -44,6 +44,7 @@
 				<title>Photohunter</title>
     </head>
     <body>
+				<div id="fb-root"></div>
         <div class="container vertical-center">
 					<table class="table">
 						<thead>
@@ -69,7 +70,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<button class="btn btn-md-default" style="display:block; margin:auto; margin-bottom:5%">Test</button>
+					<input type="image" src="" style="display:block; margin:auto; margin-bottom:5%" id="accountButton"/>
 				</div>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
