account page added. links from the profile pic button on the dataset page

--- a/src/photohunter/www/account.html
+++ b/src/photohunter/www/account.html
@@ -46,31 +46,11 @@
     <body>
 				<div id="fb-root"></div>
         <div class="container vertical-center">
-					<table class="table">
-						<thead>
-							<tr>
-								<th>Category</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td><a href="capture.html">Shaqtus</a></td>
-							</tr>
-							<tr>
-								<td><a href="capture.html">Barles Charkley</a></td>
-							</tr>
-							<tr>
-								<td><a href="capture.html">Cats</a></td>
-							</tr>
-							<tr>
-								<td><a href="capture.html">Cats</a></td>
-							</tr>
-							<tr>
-								<td><a href="capture.html">Cats</a></td>
-							</tr>
-						</tbody>
-					</table>
-					<input type="image" src="" onclick="window.location.replace('account.html');" style="display:block; margin:auto; margin-bottom:5%" id="accountButton"/>
+					<img src="" class="img-thumbnail" style="display:block; margin:auto;" alt="Profile Picture" id="accountPic" />
+					<h2>Name</h2>
+					<h3 id="accountName"></h3>
+					<h2>Score</h2>
+					<h3 id="accountScore"></h3>
 				</div>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
