--- a/src/quickpic/cordova/www/index.html
+++ b/src/quickpic/cordova/www/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/quickpic.css">
 
+        <!-- Cordova Shit -->
+        <script src="cordova.js" type="text/javascript"></script>
+
         <!-- D3.js + Charts -->
         <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
         <script src='js/d3.chart.min.js' type="text/javascript"></script>
@@ -16,6 +19,7 @@
         <script src='js/dist/quickpic.js' type="text/javascript"></script>
     </head>
     <body>
+        <div id="fb-root"></div>
         <div id="react-container" class="container"></div>
     </body>
 </html>
