--- a/src/photohunter/platforms/android/assets/www/index.html
+++ b/src/photohunter/platforms/android/assets/www/index.html
@@ -49,9 +49,7 @@
 					<div class="row">
 							<img id="logo" src="img/logo.png" style="display:block; margin:auto; width:80%;" />
 							<h1>Photohunter</h1>
-							<form action="datasets.html">
-								<input type="submit" class="btn btn-lg btn-default" style="display:block; margin: auto;" value="Log In"></br>
-							</form>
+							<button class="btn btn-lg btn-default" style="display:block; margin: auto;" onclick="loginFB()">Log In</button></br>
 					</div>
 				</div>
     		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
