per connor's request

--- a/src/photohunter/www/index.html
+++ b/src/photohunter/www/index.html
@@ -42,13 +42,13 @@
 						flex-direction: column;
 					}
 				</style>
-        <title>Photohunter</title>
+        <title>PhotoHunter</title>
     </head>
     <body>
         <div class="container vertical-center">
 					<div class="row">
 							<img id="logo" src="img/logo.png" style="display:block; margin:auto; width:80%;" />
-							<h1>Photohunter</h1>
+							<h1>PhotoHunter</h1>
 							<button class="btn btn-lg btn-default" style="display:block; margin: auto;" onclick="loginFB()">Log In</button></br>
 					</div>
 				</div>
